# naver-store-restock-alarm

./: .gitignore  LICENSE  README.md  auto_alarm.py  config.json  database.db  main.py  pyproject.toml  query_for_debug.py  개요.txt
scripts/: alarm_setting.ui  alarm_setting_ui.py  bot.py  confirm_ui.py  crawled_data.xlsx  crawling.ipynb  crawling.py  database.py  input_url.ui  input_url_ui.py  soldout_check.ui  soldout_check_ui.py  soldout_ui.py  test02.py  test_ui.py
scripts/새 폴더/: crawled_data - 복사본.xlsx  crawled_data.xlsx
ui/: alarm_setting.ui  alarm_setting_ui.py  input_url.ui  input_url_ui.py  soldout_check.ui  soldout_check_ui.py
